# franka-handeye

./: .gitignore  README.md  franka-handeye-app.py  pyproject.toml  requirements.txt  run_calibration.py  setup.py
config/: calibration_board_parameters.yaml  joint_poses.yaml
data/captured-data/pose_00/: data.json
data/captured-data/pose_01/: data.json
data/captured-data/pose_02/: data.json
data/captured-data/pose_03/: data.json
data/captured-data/pose_04/: data.json
data/captured-data/pose_05/: data.json
data/captured-data/pose_06/: data.json
data/captured-data/pose_07/: data.json
data/captured-data/pose_08/: data.json
data/captured-data/pose_09/: data.json
data/captured-data/pose_10/: data.json
data/captured-data/pose_11/: data.json
data/captured-data/pose_12/: data.json
data/hand-eye-calibration-output/: calibration_result.json
franka_handeye/: __init__.py  calibration.py  camera.py  detector.py  robot.py
scripts/: __init__.py  capture_data.py  compute_calibration.py  verify_calibration.py
